--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/next-auth": "^3.13.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mysql2": "^3.15.1",
