--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "imapflow": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
+    "mailparser": "^3.9.0",
     "mysql2": "^3.15.1",
     "next": "^15.5.3",
     "next-auth": "^4.24.11",
@@ -27,7 +30,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/mailparser": "^3.4.6",
+    "@types/node": "^20.19.25",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
